Changed rcnp gitmodule address

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "GRAnalyzer"]
 	path = GRAnalyzer
-	url = https://github.com/CAGRA-GrandRaiden/GRAnalyzer
+	url = sullivan@nsclgw1.nscl.msu.edu:~/ceclub/sullivan/cagragr/GRUTinizer/GRAnalyzer
