--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "GRAnalyzer"]
 	path = GRAnalyzer
-	url = sullivan@nsclgw1.nscl.msu.edu:~/ceclub/sullivan/cagragr/GRAnalyzer
+	url = git@github.com:CAGRA-GrandRaiden/GRAnalyzer.git
