--- a/.grutrc
+++ b/.grutrc
@@ -2,14 +2,11 @@ Unix.*.Root.MacroPath: .:$(GRUTSYS)/util:$(ROOTSYS)/macros
 #Unix.*.Root.DynamicPath:  .:~/rootlibs:$(ROOTSYS)/lib:$/home/tiguser/packages/SharcAnalysis
 
 #default MakeHistos library
-#GRUT.HistLib: $(GRUTSYS)/libraries/libMakeHistos.so
-GRUT.HistLib: $(GRUTSYS)/libraries/libFastScintHists.so
-#GRUT.HistLib: $(GRUTSYS)/libraries/libPolarHists.so
-#GRUT.HistLib: $(GRUTSYS)/libraries/libMakeSegaJanusHistos.so
+GRUT.HistLib: $(GRUTSYS)/libraries/libRCNPsav.so
 GRUT.GuiSetup: $(GRUTSYS)/gui_params.hist
 
 #files to load at log in:
-Rint.Logon: $(GRUTSYS)/.grut_logon
+Rint.Logon: $(GRUTSYS)/logon.C
 Rint.History $(GRUTSYS)/.grut_history
 Rint.HistSize: 1000000
 
