Added delay to StoppableThread::StopAll after shutting down the RCNP thread, to avoid a deadlock owing to an incomplete push after the GRUTinizer threads have shutdown. Also changed the behavior of the RCNP stdout so that it only prints status to screen in offline mode (ie without gui).

--- a/.grutrc
+++ b/.grutrc
@@ -27,8 +27,8 @@ GRUT.SnapshotDir:
 
 
 #files to load at log in:
-#Rint.Logon: $(GRUTSYS)/.grut_logon
-Rint.Logon: $(GRUTSYS)/logon.C
+Rint.Logon: $(GRUTSYS)/.grut_logon
+#Rint.Logon: $(GRUTSYS)/logon.C
 Rint.History $(GRUTSYS)/.grut_history
 Rint.HistSize: 1000000
 
