--- a/.grutrc
+++ b/.grutrc
@@ -1,8 +1,9 @@
+
 Unix.*.Root.MacroPath: .:$(GRUTSYS)/util:$(ROOTSYS)/macros
 #Unix.*.Root.DynamicPath:  .:~/rootlibs:$(ROOTSYS)/lib:$/home/tiguser/packages/SharcAnalysis
 
 #default MakeHistos library
-GRUT.HistLib: $(GRUTSYS)/lib/libRCNPhistos.so
+#GRUT.HistLib: $(GRUTSYS)/lib/libRCNPhistos.so
 #GRUT.HistLib: $(GRUTSYS)/lib/libMakeHistos.so
 #GRUT.HistLib: $(GRUTSYS)/lib/libMakeSimHistos.so
 #GRUT.HistLib: $(GRUTSYS)/lib/libFastScintHists.so
